Notebook and graph updates

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<header class="major">
 								<h2>Forbes Most Powerful Women</h2>
 								<p>Each year Forbes creates a list of the top 100 most powerful women.<br />
-								These women come from all around the world; they are politcians, musicians, CEOs, <br />
+								These women come from all around the world - they are politcians, musicians, CEOs, <br />
 								presidents and activists. Are all of these women somehow connected? <br />
 								Is there a certain formula that guarantees a woman to become more successful?</p>
 								<br />
@@ -179,38 +179,37 @@
 	 									<center>
 	  									 <img src="images/tech_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p>The first community, and the biggest, centers around technology and finance. In the community there are around 40 of the most powerful women.
-	 										  To name a few: Abigail Johnson, Aileen Lee, Amy Hood, Julie Sweet, Lynn Good and Ruth Porat are all in this community. The women have one noticable thing in common, they are successful business women in the financial sector.</p>
+	 									 <p>The first community, and the biggest one, centers around technology and finance. In the community there are around 40 of the most powerful women. To name a few: Abigail Johnson, Aileen Lee, Amy Hood, Julie Sweet, Lynn Good and Ruth Porat are all in this community. The women have one noticable thing in common - they are successful businesswomen in the financial sector.</p>
 	 									</li>
 	 								<li class="">
 	 									<center>
 	  									 <img src="images/tennis_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p>The second community revolves around the game Tennis. Serena Williams is the only powerful woman in this community which is understandable since there are no other female athletes on the most powerful lists. </p>
+	 									 <p>The second community revolves around the game of tennis. Serena Williams is the only powerful woman in this community which is understandable since there are no other female athletes on the most powerful women lists. She stands alone! Phrases such as Wimbledon, doubles, singles and even game scores all appear in the wordcloud, everything related to tennis. </p>
 	 									</li>
 	 								<li class="">
 	 									<center>
 	  									 <img src="images/music_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p>The third community centers around the music industry. In the community there are 3 powerful women: Beyoncé, Lady Gaga and Rihanna. These women have an obvious connection, they are all famous musicians</p>
+	 									 <p>This community centers around the music industry. In the community there are 3 powerful, and very famous, women: Beyoncé, Lady Gaga and Rihanna. These women have an obvious connection - they are all famous musicians.</p>
 	 								</li>
 	 								<li class="">
 	 									<center>
 	  									 <img src="images/veitiggi_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p>The fourth community revolves around the entertainment and arts industries. In the word cloud there are words such as Dreamgirls, Presley and Hurston which relate to the industry mentioned. In the community there are three powerful women: Ava Duvernay, Oprah Winfrey and Bonnie Hammer, who all are in the entertainment industry. </p>
+	 									 <p>The fourth community revolves around the entertainment and arts industries. In the wordcloud there are words such as Dreamgirls, Presley and Hurston, which all relate to the industry mentioned. In the community there are three powerful women: Ava Duvernay, Oprah Winfrey and Bonnie Hammer, all a part of the entertainment industry. </p>
 	 									</li>
 	 								<li class="">
 	 									<center>
 	  									 <img src="images/veitiggi2_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p> The fifth community revolves around Great Britain. In the word cloud there are words such as Salmond, Farage and Corbyn who are all politicans in Britain. In the community there are five powerful women: Ana Botin, Judith Mckenna, Kaherine Viener, Nichola Sturgeon, Theresa May who all have in common that they are either of british descent or live and work in Britain.</p>
+	 									 <p> The fifth community revolves around Great Britain. In the wordcloud there are words such as Salmond, Farage and Corbyn, who are all British politicans. In the community there are five powerful women: Ana Botin, Judith McKenna, Kaherine Viener, Nichola Sturgeon and Theresa May, who all have in common that they are either of British descent or live and work in Britain.</p>
 	 									</li>
 	 								<li class="">
 	 									<center>
 	  									 <img src="images/skritid_wordcloud.JPG" alt="" style="width:100%">
 	  								 <center>
-	 									 <p>The sixth community revolves around Hillary Clinton. In the word cloud there are words that revolve around Hillary directly: Rodham which is her maiden name. Fresnel which is the type of glass used in here eyeglasses since she has a particularly bad vision. Sarin which is a leathal gas that she was accused of approving delivery of to Syrian Rebels.  </p>
+	 									 <p>The sixth community revolves around Hillary Clinton. In the wordcloud there are words that revolve around Hillary directly: Rodham, for example, which is her maiden name. Fresnel, which is the type of glass used in here eyeglasses since she has a particularly bad vision. Sarin, which is a lethal gas that she was accused of approving delivery of to Syrian Rebels. There must be some extensive data about these phenomena on Wikipedia! </p>
 	 									</li>
 	 							</ul>
 	 						</div>
