Notebook and website

--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Data</a></h1>
+						<h1><a href="index.html">Home</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -28,9 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Tehnical Details</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="elements.html">List of Women</a></li>
 										</ul>
 									</div>
 								</li>
