Notebook and html

--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,6 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Tehnical Details</a></li>
-											<li><a href="elements.html">List of Women</a></li>
 										</ul>
 									</div>
 								</li>
@@ -43,6 +42,9 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+
+
+								<!-- <a href="https://en.wikipedia.org/wiki/Forbes_list_of_The_World%27s_100_Most_Powerful_Women">Wikipedia</a>-->
 
 								<h3>Data Exploration</h3>
 								<p>The data for the project is gathered from three sources. Using the Forbes lists from 2004 to find the most powerful women a list of 153 have been found, since women often appear more than once on the list. The website <a href="https://littlesis.org/lists/2687-the-worlds-most-powerful-women-2019/members">Little Sis</a> is used to gather all the relationship these women have with important organizations. When creating the network for the project each women will be representeed with a node, but nodes also consist of companies, businesses, schools and organizations that a woman has a relationship with. The Little sis data alone results in 1400 nodes in the network. Next, the wikipedia pages for the women are gatherd to gain even more connections, if there are more connections available on the wikipedia page then more nodes are creating. The wikipedia pages resulted in about 12.000 more nodes that were added to the network. The final network therefore consists of around 13.000 nodes and 18.000 edges, where and edge represents a connection between the two nodes.</p>
